# hexdumper

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.linux  Makefile.win32  README.md  dump.cpp  dump2.cpp  dump_android_hash.h  dump_crc32.h  dump_dummy_hash.h  dump_hash.h  dump_ossl_hash.h  dump_sum.h  fhandle.h  machmemory.cpp  machmemory.h  mmdump.cpp  mmedit.cpp  mmem.h
dumputils/: bigascdump.cpp  bigascdump.h  bighexdump.cpp  bighexdump.h  crc32.h
itsutils/src/: dump.cpp  dump_crc32.h  dump_hash.h  dump_ossl_hash.h  dump_sum.h
jni/: Android.mk  Application.mk
